VER14 - Falak jok, exit leallitja a szalakat